# short_drama_agent

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: config.py  models.py
backend/app/exporters/: script_exporter.py
backend/app/graph/: routing.py  state.py  workflow.py
backend/app/graph/nodes/: common.py  lead_writer.py  llm_helpers.py  orchestrator.py  quality_reviewer.py  revision_editor.py  shot_director.py  world_builder.py
backend/app/jobs/: manager.py
backend/app/llm/: bailian_client.py  embedding_client.py
backend/app/mcp_client/: client.py
backend/app/memory/: indexer.py  manager.py
backend/app/projects/: repository.py
backend/app/storage/: db.py  models.py  schema.sql
backend/app/tools/: function_schemas.py  handlers.py
backend/mcp_servers/: exporter_server.py  platform_rules_server.py  script_library_server.py
backend/scripts/: test_bailian_json.py
backend/tests/: test_smoke.py
data/examples/: sample_brief.json
data/platform_rules/: douyin_short_drama.md
data/templates/: identity_reversal_hook.md
docs/: memory_architecture.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  styles.css
